--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Collect words</title>
+  <title>Collect Words</title>
   <script src="https://unpkg.com/vue@next"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <script src="js/index.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
