--- a/index.htm
+++ b/index.htm
@@ -5,19 +5,18 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Collect Words</title>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 
 <body>
   <h1>Collect words</h1>
   <div id="app">
-    <div style="border: 1pt; border-style: solid; padding: 20pt">
+    <div style="border: 2pt; border-style:dashed; padding: 20pt">
       <input v-model="word" type="text" placeholder="Type a word" id="wordInput" />
-      <button v-on:click="save(word)" id="saveButton" >Save</button>
-      <button v-on:click="show" id="showButton">Show</button>
-      <button v-on:click="clear" id="clearButton">Clear</button>
-      <span id="output">{{message}}</span>
+      <button v-on:click="save(word)" id="saveButton" class="btn btn-primary m-1">Save</button>
+      <button v-on:click="show" id="showButton" class="btn btn-secondary m-1">Show</button>
+      <button v-on:click="clear" id="clearButton" class="btn btn-warning m-1">Clear</button>
+      <div id="output">{{message}}</div>
     </div>
   </div>
 
